--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "4.2.6",
     "axios": "^1.1.3",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "mongodb": "^5.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^9.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
